Recent Activity Icon and Alignment Fix (#580)
* Recent Activity Icon and Alignment Fix

* final

* Feeback2

* Fix alignment of icon in recent activity.

closes #491

--- a/frontend/src/components/common/presentational/recentActivity/style.scss
+++ b/frontend/src/components/common/presentational/recentActivity/style.scss
@@ -6,13 +6,26 @@
   box-shadow: 3px 3px 12px rgba(10, 35, 83, 0.08);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding: 24px;
 
   .recentActivityTitle {
     display: flex;
     align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin-left: -7px;
+    .allTopicImg {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+    }
     .topicHeading {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      margin-top: 1px;
       margin-left: 8px;
     }
   }
@@ -38,6 +51,7 @@
         color: #773cbd;
         font-weight: 600;
         word-break: break-word;
+        text-align: left;
       }
       .postTime {
         font-family: "ProximaNova-Regular";
